--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
 <!--CTRL + SHIFT + / Start Top bar-->
 <div class="main-header-outer">
-
+    <div class="top-bar-left">
+        <img
+                src="https://upload.wikimedia.org/wikipedia/commons/1/13/Wattpad_logo.png"
+                alt="logo-image">
+    </div>
+    <div class="top-bar-right"></div>
 </div>
 <!--End Top bar-->
 
