--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nix | App</title>
     <link rel="stylesheet" href="styles/main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -17,7 +22,43 @@
                 src="https://upload.wikimedia.org/wikipedia/commons/1/13/Wattpad_logo.png"
                 alt="logo-image">
     </div>
-    <div class="top-bar-right"></div>
+    <div class="top-bar-right">
+        <ul class="nav-bar-outer">
+            <li>
+                <span>
+                    <a href="#">Home</a>
+                </span>
+            </li>
+            <li>
+                <span>
+                    <a href="#">Services</a>
+                </span>
+            </li>
+            <li>
+                <span>
+                    <a href="#">About</a>
+                </span>
+            </li>
+            <li>
+                <span>
+                    <a href="#">Portfolio</a>
+                </span>
+            </li>
+            <li>
+                <span>
+                    <a href="#">Videos</a>
+                </span>
+            </li>
+            <li>
+                <span>
+                    <a href="#">Contact Us</a>
+                </span>
+            </li>
+            <li>
+                <button class="contact-us-now-button">Contact Us Now</button>
+            </li>
+        </ul>
+    </div>
 </div>
 <!--End Top bar-->
 
