--- a/index.html
+++ b/index.html
@@ -62,5 +62,15 @@
 </div>
 <!--End Top bar-->
 
+<!--landing-slider-top-->
+<div class="landing-page-slider-outer">
+    <div class="landing-page-slider-left landing-page-inner">
+        <img src="https://img.freepik.com/free-vector/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg?w=740&t=st=1664640384~exp=1664640984~hmac=e6e6b9acbe9d35201dbe52dbe03017c526ef8f0cb731563dda4ef16babf38cea"
+             alt="">
+    </div>
+    <div class="landing-page-slider-right landing-page-inner"></div>
+</div>
+<!--landing-slider-top-->
+
 </body>
 </html>
