--- a/index.html
+++ b/index.html
@@ -68,7 +68,24 @@
         <img src="https://img.freepik.com/free-vector/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg?w=740&t=st=1664640384~exp=1664640984~hmac=e6e6b9acbe9d35201dbe52dbe03017c526ef8f0cb731563dda4ef16babf38cea"
              alt="">
     </div>
-    <div class="landing-page-slider-right landing-page-inner"></div>
+    <div class="landing-page-slider-right landing-page-inner">
+        <h4 class="welcome-text">Welcome To Nix Digital</h4>
+        <h1 class="build-web-text">
+            Build <span style="color: #02AAF5">Your Website</span> <br>
+            The Best In <span style="color: #FF500A">SEO</span>?
+        </h1>
+        <p class="slider-short-desc">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam consectetur consequatur dignissimos dolor
+            dolore ea enim eum excepturi fuga, fugiat minima mollitia odit placeat quae quas quibusdam repellendus sit
+            vero!
+        </p>
+        <div class="slider-inner-button-wrapper">
+            <button class="message-us-button">Message us Now</button>
+            <div class="round-button-outer">
+                <button></button>
+            </div>
+        </div>
+    </div>
 </div>
 <!--landing-slider-top-->
 
