--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
 
+
+    <script src="https://kit.fontawesome.com/f042c01218.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -82,7 +85,10 @@
         <div class="slider-inner-button-wrapper">
             <button class="message-us-button">Message us Now</button>
             <div class="round-button-outer">
-                <button></button>
+                <button>
+                    <i class="fa-sharp fa-solid fa-phone"></i>
+                </button>
+                <span class="contact-text">+1 276-3000-733</span>
             </div>
         </div>
     </div>
