--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </head>
 <body>
 
+<button class="scroll-button">
+    <i class="fa-solid fa-angle-up"></i>
+</button>
+
 <!--CTRL + SHIFT + / Start Top bar-->
 <div class="main-header-outer">
     <div class="top-bar-left">
