--- a/index.html
+++ b/index.html
@@ -785,6 +785,41 @@
 </div>
 <!--about-area-->
 
+<!--youtube-area-->
+<div class="youtube-outer">
+    <div class="youtube-inner">
+
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/SAQ-iIJkLzA"
+                title="Drinking in ZERO-G! (and other challenges of a trip to Mars)" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+    </div>
+    <div class="youtube-inner">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad alias architecto deserunt dolores
+            eos est inventore iure laboriosam nisi nulla numquam reiciendis, sequi sint soluta sunt ullam. Aspernatur
+            consectetur culpa error, illo inventore ipsam perspiciatis quis repellendus sapiente soluta? Ab aperiam at
+            blanditiis corporis culpa cupiditate delectus dignissimos distinctio doloribus dolorum eaque eum expedita,
+            facilis illo iusto labore laboriosam minima minus nam non odit perspiciatis possimus praesentium quaerat
+            quasi quidem rem saepe sed similique soluta unde velit veritatis vero vitae voluptas voluptate voluptatem.
+            Aspernatur dicta eos est placeat suscipit. Aliquam animi, architecto atque autem consectetur deserunt dicta
+            distinctio earum eligendi est exercitationem fugit id ipsa itaque libero minus neque non nostrum nulla odit
+            praesentium provident sapiente sequi temporibus totam unde vitae. Corporis cupiditate dolorum expedita id
+            illo laudantium libero non officiis, omnis optio placeat, provident quasi repellendus reprehenderit saepe
+            vero voluptatem! Aliquam aut facilis ipsa minus nam temporibus. Excepturi magnam minus molestiae nesciunt
+            perferendis repellat velit voluptas voluptates. Animi blanditiis dolorem ducimus ea facere facilis fuga
+            fugiat id, illo in iusto magni necessitatibus nihil nobis obcaecati odio officia pariatur qui sint tempora
+            totam velit voluptates? Aliquam aliquid autem dolorum eos esse ex, facere fugiat laudantium maiores minus,
+            mollitia officia omnis pariatur porro possimus quos, repudiandae sint soluta voluptate voluptatem.
+            Distinctio ducimus, impedit in iste itaque maiores natus nihil nobis quasi sapiente sequi sint sit?
+            Assumenda ipsam laboriosam neque quasi reprehenderit rerum voluptates? Aperiam deleniti dolore eius enim et,
+            eum explicabo itaque iure labore magnam, odit quas quos tempora ullam.
+        </p>
+    </div>
+</div>
+<!--youtube-area-->
+
 
 </body>
 </html>
